<resources>
    <string name="hello_customer">Hello Customer</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="close_button">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="text">Show Custom Toast</string>
    <string name="show_toast">Show Toast</string>
    <string name="custom_toast">This is Custom Toast</string>
    <string name="image_description">Custom Toast ImageView</string>
    <string name="app_name">MusiqX</string>
    <string name="action_settings">Settings</string>
    <string name="action_shuffle">Shufle</string>
    <string name="action_listening">Listening</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_download">Download</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_library">Library</string>
    <string name="nav_item_discover">Discover</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_sync">Sync</string>
    <string name="nav_item_options">Options</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="song_info">No Song!</string>
    <string name="repeat_all">Repeat All</string>
    <string name="repeat_song">Repeat Song</string>
    <string name="repeat_off">Repeat Off</string>
    <string name="shuffle_off">Shuffle Off</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="more_main">&#8230;</string>
    <string name="null_time">00:00</string>
    <string name="error_access_file_main">An error occurred trying to access the file</string>
    <string name="no_song">Song List Empty</string>
    <string name="load">Click Sync to load your library</string>
    <string name="sync_song">Sync</string>
    <string name="internet_fail">No internet connection</string>
    <string name="update_library_fail">Unable to update. Try later</string>
    <string name="playlists">Playlists</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="email_free">This account doesn\'t exist</string>
    <string name="email_recovery">An email to recover your password has been sent to you</string>
    <string name="prompt_email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="server_fail">An error occurred trying to access the server. Try again later</string>
    <string name="go_back">GO BACK</string>
    <string name="sign">Sign Up</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="mail">E-mail</string>
    <string name="c_password">Confirm Password</string>
    <string name="agree">I Accept The Terms And Conditions</string>
    <string name="hint">hint error</string>
    <string name="country">Country</string>
    <string name="condition_check">You need to accept the Terms</string>
    <string name="email_empty">Please enter your Email Address</string>
    <string name="email_invalid">Please enter a valid Email Address</string>
    <string name="email_registered">This Email is already registered</string>
    <string name="fname_empty">Please enter your First Name</string>
    <string name="fname_short">Your First Name is too short</string>
    <string name="fname_long">Your First Name is too long</string>
    <string name="lname_empty">Please enter your Last Name</string>
    <string name="lname_short">Your Last Name is too short</string>
    <string name="lname_long">Your Last Name is too long</string>
    <string name="password_short">Your Password must have at least 6 characters</string>
    <string name="password_match">Passwords don\'t match</string>
    <string name="password_empty">Please enter your Password</string>
    <string name="password_long">Your password is too long</string>
    <string name="country_error">Please enter a valid country</string>
    <string name="password_condition">Your password must contain at least one upper case letter,one lower case letter, and a special character</string>
</resources>