<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/library"
            android:title="@string/nav_item_library" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/discover"
            android:title="@string/nav_item_discover" />
    </group>

    <item android:title="@string/nav_item_options">
        <menu>
            <item
                android:id="@+id/nav_sync"
                android:icon="@drawable/sync"
                android:title="@string/nav_item_sync" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/nav_item_settings" />
        </menu>
    </item>

</menu>