<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.skilledhacker.developer.musiqx.RegistrationActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/f_name"
            android:hint="@string/f_name"
            android:inputType="textPersonName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/l_name"
            android:id="@+id/l_name"
            android:inputType="textPersonName"
            android:layout_below="@+id/f_name"
        />

        <AutoCompleteTextView
            android:id="@+id/Auto_complete_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="textAutoComplete"
            android:layout_below="@+id/l_name"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/Auto_complete_country"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/mail"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c_password"
            android:hint="@string/c_password"
            android:inputType="textPassword"
            android:layout_below="@+id/password"
            android:focusable="true"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/agree"
            android:text="@string/agree"
            android:layout_below="@id/c_password"
            android:textColor="#CC0000"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/sign_2"
            android:hint="@string/sign"
            android:layout_below="@id/agree"
        />

</RelativeLayout>
