<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ListContainer"
        android:visibility="visible"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/SongList">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/NoList"
        android:orientation="vertical"
        android:visibility="gone"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:visibility="visible"
            android:id="@+id/NoSong"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/no_song"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorPrimary"
                        android:layout_gravity="center"
                        android:textSize="@dimen/large" />
                    <TextView
                        android:text="@string/load"
                        android:layout_width="wrap_content"
                        android:textColor="@color/textColorPrimary"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/large" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:text="@string/sync_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/windowBackground"
                android:layout_gravity="center"
                android:id="@+id/SyncSong" />
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:indeterminateTint="@color/colorAccent"
            android:layout_height="0sp"
            android:visibility="gone"
            android:id="@+id/LoadingBar"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

</RelativeLayout>